Fix layout issues
Made everything centered from the top of the screen and forced the
grid area to be the same size no matter how many squares are in it.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
+#outer {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #grid-container {
     display: flex;
     flex-direction: column;
+    height: 1000px;
+    width: 1000px;
 }
